fix(Submit Payment): alignment (#438)

--- a/member/client/app/routes/shipRequests/confirm/confirm.scss
+++ b/member/client/app/routes/shipRequests/confirm/confirm.scss
@@ -16,3 +16,7 @@
   margin-bottom: 20px;
   border-radius: 5px;
 }
+.hrs{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
